[package]
name = "mpl_bubblegum"
version = "0.1.0"
edition = "2021"
authors = ["Rishav Mehra <rishavmehra61@gmail.com>"]

[lib]
name = "mpl_bubblegum"
crate-type = ["cdylib"]

[dependencies]
# Solana Dependencies
solana-program = "1.16.15"
solana-sdk = "2.2.1"
solana-client = "1.17.0"
solana-instruction = "2.2.1"

# MPL & SPL Dependencies
mpl-bubblegum = {version = "1.4.0" }
spl-account-compression = { version = "0.4.2", features = ["no-entrypoint"] }
spl-merkle-tree-reference = "0.1.1"

# Rust Utilities
rustler = "0.36.1"
base64 = "0.22.1"
bincode = "1.3.3"
